[package]
name = "ashnazg"
version = "0.1.0"
authors = ["Connor Wade"]
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
llm = { git = "https://github.com/rustformers/llm.git", branch = "main", version = "0.2.0-dev" }
rand = "0.8.5"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
